# weesl

./: .gitignore  README.md  flow.dev.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/weesl/cli/: __init__.py
src/weesl/core/: __init__.py  call.py  interpolate.py  task.py
src/weesl/lib/: data_container.py  modules.py  processes.py
src/weesl/modules/fs/: __init__.py
src/weesl/modules/git/: __init__.py  cmd.py
src/weesl/modules/http/: __init__.py  data.py  headers.py  request.py  session.py
src/weesl/modules/rsync/: __init__.py  cmd.py
src/weesl/modules/sys/: __init__.py  rsync.py
tests/core/: test_interpolate.py
tests/modules/: test_git.py  test_http.py  test_rsync.py
