[metadata]
name = weesl
description = A wee little setup "language"
author = philmish
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.10
	

[options]
package = 
	weesl
	
install_requires = 
	pyyaml
    requests
	
	
python_requires = >=3.10
package_dir = 
	=src
	
zip_safe = no

[options.extras_require]
testing = 
	pytest>=7.0
	pytest-cov>=4.0
	mypy>=1.3
	flake8>=3.9
	tox>=4.5
	

[options.package_data]
weesl = yes

[options.entry_points]
console_scripts =
    weesl = weesl.cli:run

[flake8]
max-line-length = 160

